--- a/phoenix/rumbl/web/templates/video/form.html.eex
+++ b/phoenix/rumbl/web/templates/video/form.html.eex
@@ -24,6 +24,12 @@
   </div>
 
   <div class="form-group">
+    <%= label f, :category_id, "Category", class: "control-label" %>
+    <%= select f, :category_id, @categories, class: "form-control",
+        promt: "Choose a category" %>
+  </div>
+
+  <div class="form-group">
     <%= submit "Submit", class: "btn btn-primary" %>
   </div>
 <% end %>
